frontend ready for anomaly detection,backend sending mock data for now

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@mui/icons-material": "^6.2.0",
     "@mui/material": "^6.2.0",
+    "@radix-ui/react-slot": "^1.1.2",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "cra-template": "1.2.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.14.4",
@@ -20,12 +22,16 @@
     "react-data-export": "^0.6.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-particles": "^2.12.2",
     "react-plotly.js": "^2.6.0",
     "react-range": "^1.10.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
+    "react-tsparticles": "^2.12.2",
     "recharts": "^2.15.0",
+    "tailwind-variants": "^0.3.1",
+    "tsparticles": "^3.8.1",
     "victory": "^37.3.4",
     "xlsx": "^0.18.5"
   },
